# threading-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  dev-up.bat  dev-up.ps1  run.py
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_orders_signal_timeframe.py  0003_signal_meta.py  0004_orders_risk_fields.py  0005_orders_leverage.py  0006_orders_reject_reason.py  0007_orders_status_len_32.py  0008_orders_exit_fields.py  0009_freeze_legacy_closed_orders.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: settings.py
backend/app/db/: init.py  session_manager.py
backend/app/exchanges/: base_exchange.py  binance_exchange.py
backend/app/models/: __init__.py  candle.py  order.py  position.py  signal.py  strategy_run.py  symbol_mapping.py  trade.py
backend/app/repositories/: base_repository.py  candle_repository.py  order_repository.py  position_repository.py  signal_repository.py  strategy_run_repository.py  symbol_mapping_repository.py  trade_repository.py
backend/app/schemas/: account_summary.py  analysis_explain_request.py  analysis_explain_response.py  analysis_request.py  analysis_response.py  automation.py  backfill_request.py  backfill_response.py  backtest_progress.py  backtest_request.py  backtest_response.py  candle_read.py  market_pair_read.py  market_sync_request.py  order_create.py  order_read.py  order_stop_update.py  scan_request.py  scan_response.py  signal_create.py  signal_read.py  symbol_mapping_create.py  (+3 more)
backend/tests/: test_strategy_fixes.py
(+83 files in other folders)
