[project]
name = "threading-bot-backend"
version = "0.1.0"
description = "FastAPI backend for a modular trading bot"
requires-python = ">=3.13.5"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pandas>=2.2.0",
  "numpy>=2.0.0",
  "ta-lib>=0.4.28",
  "yfinance>=0.2.40",
  "python-binance>=1.0.19",
  "httpx>=0.27.0",
  "websockets>=12.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
]
